--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
 		"lint:scss": "npx stylelint \"**/*.scss\" --fix"
 	},
 	"dependencies": {
+		"clsx": "^2.0.0",
+		"framer-motion": "^10.13.0",
 		"next": "13.4.12",
+		"next-intl": "^2.19.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
+		"@svgr/webpack": "^8.0.1",
 		"@types/node": "20.4.4",
 		"@types/react": "18.2.15",
 		"@types/react-dom": "18.2.7",
@@ -35,6 +39,7 @@
 		"prettier": "^3.0.0",
 		"sass": "^1.64.1",
 		"stylelint": "^15.10.2",
+		"stylelint-config-standard-scss": "^10.0.0",
 		"typescript": "5.1.6"
 	}
 }
