--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"lint:scss": "npx stylelint \"**/*.scss\" --fix"
 	},
 	"dependencies": {
+		"@radix-ui/react-navigation-menu": "^1.1.3",
 		"clsx": "^2.0.0",
 		"framer-motion": "^10.13.0",
 		"next": "13.4.12",
