--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "geekon",
 	"version": "0.1.0",
 	"private": true,
-	"packageManager": "^pnpm@8.6.1",
+	"packageManager": "pnpm@8.6.1",
 	"engines": {
 		"node": ">=18.x",
 		"pnpm": ">=8.6.1",
