--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
 		"lint:scss": "npx stylelint \"**/*.scss\" --fix"
 	},
 	"dependencies": {
+		"@radix-ui/react-checkbox": "^1.0.4",
 		"@radix-ui/react-navigation-menu": "^1.1.3",
 		"clsx": "^2.0.0",
 		"framer-motion": "^10.13.0",
 		"next": "13.4.12",
 		"next-intl": "^2.19.0",
+		"next-themes": "^0.2.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0"
 	},
