--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"prettier": "^3.0.0",
 		"sass": "^1.64.1",
 		"stylelint": "^15.10.2",
+		"stylelint-config-standard": "^34.0.0",
 		"stylelint-config-standard-scss": "^10.0.0",
 		"typescript": "5.1.6"
 	}
